# FluidLite

./: .travis.yml  CMakeLists.txt  README.md  aliases.cmake  fluidlite-config.cmake.in  fluidlite.pc.in
example/: Makefile
example/src/: OpenalDemo.cpp  alsademo.c  main.c  openaldemo.cbp  sdl2_mixer_wav.cpp  sdldemo.cpp
example/src/qFluidlite/: .qmake.stash  Cow-Sync.pro  Makefile  mainwindow.cpp  mainwindow.h  mainwindow.ui
example/src/qFluidlite/fluidlite/: LICENSE  Makefile.os2  README.md  alsademo.c  fluid_chan.c  fluid_chan.h  fluid_chorus.c  fluid_chorus.h  fluid_config.h  fluid_conv.c  fluid_conv.h  fluid_defsfont.c  fluid_defsfont.h  fluid_dsp_float.c  fluid_dsp_simple.c  fluid_gen.c  fluid_gen.h  fluid_hash.c  fluid_hash.h  fluid_init.c  fluid_list.c  fluid_list.h  fluid_midi.h  fluid_mod.c  fluid_mod.h  fluid_phase.h  fluid_ramsfont.c  fluid_ramsfont.h  fluid_rev.c  fluid_rev.h  fluid_settings.c  fluid_settings.h  fluid_sfont.h  fluid_synth.c  fluid_synth.h  fluid_sys.c  fluid_sys.h  fluid_tuning.c  fluid_tuning.h  fluid_voice.c  (+4 more)
example/src/qFluidlite/fluidlite/include/: fluidlite.h
example/src/qFluidlite/fluidlite/include/fluidsynth/: gen.h  log.h  misc.h  mod.h  ramsfont.h  settings.h  sfont.h  synth.h  types.h  version.h  voice.h
example/src/qFluidlite/fluidlite/stb/: stb_vorbis.c
include/: fluidlite.h
include/fluidlite/: synth.h
include/fluidsynth/: sfont.h  version.h
src/: Makefile.os2  fluid_chan.c  fluid_chorus.c  fluid_chorus.h  fluid_config.cmake  fluid_defsfont.c  fluid_defsfont.h  fluid_settings.c  fluid_synth.c  fluid_synth.h  fluid_sys.c  fluid_sys.h  fluid_voice.c  fluid_voice.h  fluidsynth_priv.h
src/watcom/: fluid_config.h
src/watcom/fluidlite/: version.h
stb/: stb_vorbis.c
